# cli-agent

./: .gitignore  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  README.md  autofix_parser_loop.py  benchmark_20260124_193711.json  benchmark_20260124_194253.json  benchmark_20260124_194349.json  benchmark_20260124_194425.json  benchmark_20260124_200614.json  benchmark_20260124_201545.json  benchmark_20260124_203908.json  benchmark_20260124_215622.json  benchmark_20260124_215653.json  benchmark_20260124_215940.json  benchmark_20260127_221051.json  benchmark_20260127_221246.json  benchmark_20260127_222516.json  benchmark_20260212_103204.json  benchmark_quick.json  benchmark_tbench2_20260128_182913.json  carnival_website_prompt.md  easy_tasks_results.json  enhance_plain_text.py  go.mod  go.sum  goenv.sh  harbor_adapter.py  harbor_build_eai.sh  harbor_gc_stale_tbench_containers.sh  harbor_pre_run_cleanup.sh  harbor_preflight.sh  harbor_prepull_images.sh  harbor_run.sh  harbor_run_and_track.sh  improvement-1.md  index.html  install.sh  install_fedora.sh  (+87 more)
.claude/: settings.local.json
ascii/: monkey.txt  title.txt
eai_agent/: __init__.py  agent.py
glm/: index.html  package-lock.json  package.json
harbor-adapter/: pyproject.toml
harbor-adapter/eai_agent/: __init__.py  agent.py
improvement_plans/: failed_official.txt  failed_tasks_list.txt  failed_v2.txt  plan1_retry_tasks.md  plan2_system_prompt.md  plan3_docker_env.md  plan4_ultra_retry.md  plan5_category_prompts.md  plan6_easy_tasks.md  plan7_last_mile.md  plan_a_ultra_retry.md  tasks_for_retry.txt  (+2 more)
(+672 files in other folders)
